--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
-    "astro": "^5.1.7"
+    "astro": "^5.1.7",
+    "gsap": "^3.13.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
