--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/sitemap": "^3.4.1",
     "@fortawesome/fontawesome-free": "^6.7.2",
     "astro": "^5.1.7",
     "gsap": "^3.13.0"
