--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@astrojs/sitemap": "^3.4.1",
+    "@astrojs/tailwind": "^6.0.2",
     "@fortawesome/fontawesome-free": "^6.7.2",
     "astro": "^5.1.7",
     "gsap": "^3.13.0"
